fix(theme): link in list will not wrap auto

--- a/src/client/theme-default/styles/components/vp-doc.css
+++ b/src/client/theme-default/styles/components/vp-doc.css
@@ -106,6 +106,11 @@
   color: var(--vp-c-brand-dark);
 }
 
+.vp-doc ol>li a,
+.vp-doc ul>li a{
+  overflow-wrap: break-word;
+}
+
 .vp-doc strong {
   font-weight: 600;
 }
